Update project.clj to have access to Hotspot Servicability API.